src/test/deca/syntax/valid/test_dir/added/parser/template.deca
// Description:
//    test
//
// Results:
//    test_synt --> a tree without no error
//
// History:
//    created on 07/01/2022

