src/test/deca/syntax/invalid/test_dir/added/lexer/comment_closing.deca
// Description:
//    test with too much closing comment
//
// Results:
//    test_lex --> error line 10
//
// History:
//    created on 05/01/2022

/* */ */